# bambi_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  cli.py  config.py  db.py  dependencies.py  main.py  schemas.py
app/services/: __init__.py  agent_service.py  contact_channels.py  ingestion.py  knowledge_files.py  mybusiness.py  payment_links.py  retrieval.py  utils.py  vector_store.py
app/tools-knowleage/: about_the_college.txt  contacting_bambi_college.txt  directions_to_bambi_college.txt  driving_and_transportation_courses.txt  forklift_instructor_course.txt  general_safety_at_work.txt  generated_tools_manifest.json  laws_and_regulations.txt  mobile_machine_license.txt  payment_links.json  personal_protective_equipment.txt  regulation_168.txt  safety_courses.txt  safety_trustee_course.txt  self_loading_crane_course.txt  tractor_course.txt  work_at_height_instructor_course.txt
scripts/: build_knowledge_tools.py  export_wordpress_raw.py
tests/: test_build_knowledge_tools.py  test_contact_channels.py  test_db.py  test_mybusiness.py  test_mybusiness_registration.py  test_payment_links.py  test_payment_security.py  test_privacy.py  test_utils.py
